--- a/Shop/Search-page/app/index.html
+++ b/Shop/Search-page/app/index.html
@@ -1733,7 +1733,7 @@
                             <!--FORM-->
                             <div class="filter">
                                 <div class="section">
-                                    <div class="tab_title">
+                                    <div class="tab_title title_active">
                                         <button class="open_button"></button>
                                         <div class="select_indicator">
                                             <span></span>
@@ -1763,7 +1763,7 @@
                                     </div>
                                 </div>
                                 <div class="section range">
-                                    <div class="tab_title">
+                                    <div class="tab_title title_active">
                                         <button class="open_button"></button>
                                         <div class="select_indicator">
                                             <span></span>
@@ -1795,7 +1795,7 @@
                                     </div>
                                 </div>
                                 <div class="section brands">
-                                    <div class="tab_title">
+                                    <div class="tab_title title_active">
                                         <button class="open_button"></button>
                                         <div class="select_indicator">
                                             <span></span>
