--- a/Shop/card-tiles/app/index.html
+++ b/Shop/card-tiles/app/index.html
@@ -3078,7 +3078,8 @@
             <a class="tab_name" href="#">Бордюр</a>
             <a class="tab_name" href="#">Панно</a>
          </div>
-         <div class="images_nav">
+         <div class="slider_container">
+            <div class="images_nav">
             <a class="img_block img_active">
             <img src="images/tile2.png" alt="">
             </a>
@@ -3094,6 +3095,43 @@
             <a class="img_block">
             <img src="images/tile2.png" alt="">
             </a>
+            <a class="img_block img_active">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block img_active">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block img_active">
+            <img src="images/tile2.png" alt="">
+            </a>
+            <a class="img_block">
+            <img src="images/tile2.png" alt="">
+            </a>
+         </div>
          </div>
       </div>
    </div>
@@ -3120,26 +3158,6 @@
                               <button class="button_close">Подробнее</button>
                           </div>
                         </div>
-               </div>
-               <div class="notification_container">
-                  <div class="notification_card">
-                     <div class="wrap">
-                        <i class="icon-tag"></i>
-                        <div class="text">
-                           <p>Уценка: скол, повреждения упаковки.</p>
-                        </div>
-                     </div>
-                     <a href="#">Фото дефекта</a>
-                  </div>
-                  <div class="notification_card pink">
-                     <div class="wrap">
-                        <i class="icon-exclamation-circle"></i>
-                        <div class="text">
-                           <p>Утром было большое солнце, и лес пел всею гущей своего голоса, пропуская утренний ветер под исподнюю листву. </p>
-                           <p>Захар Павлович заметил не столько утро, сколько смену работников дождь уснул в почве, его заместило солнце</p>
-                        </div>
-                     </div>
-                  </div>
                </div>
             </div>
             <div class="modal_information">
