--- a/portfolio/Compers/app/index.html
+++ b/portfolio/Compers/app/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Compers</title>
         <meta name="description" content="">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta content="telephone=no" name="format-detection">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/libs.css">
         <link rel="stylesheet" href="css/main.css">
