--- a/Shop/lc-page/app/index.html
+++ b/Shop/lc-page/app/index.html
@@ -1201,7 +1201,7 @@
                                     <div class="form-group">
                                         <label for="tel">Телефон:</label>
                                         <input id="tel" type="tel" required />
-                                        <span class="error_icon"></span>
+                                        <span class="error_icon"><i class="icon-exclamation-circle"></i></span>
                                     </div>
                                     <span class="uncorrect_num">Телефон введен неверно. Проверьте правильность номера. <br><span>Если вы уверенны что телефон введен верно, свяжитесь с нами <br> по номеру 8 800 555 74 76.</span></span>
                                     <div class="password_group">
@@ -1215,7 +1215,7 @@
                                     <span class="uncorrect_pass">Неверный пароль. Проверьте правильность ввода пароля. <br><span>Если вы уверенны что пароль введен верно, свяжитесь с нами <br> по номеру 8 800 555 74 76.</span></span>
                                     <span class="successful">Мы выслали SMS с паролем на указанный номер. <br>Время жизни пароля - 1 час</span>
                                     <div class="form-group">
-                                        <input id="enter" type="submit" value="Войти" required />
+                                        <input id="enter" class="active_s" type="submit" value="Войти" required />
                                     </div>
                                 </form>
                             </div>
@@ -1291,7 +1291,7 @@
                 </div>
             </div>
             <!--Личный кабинет(Авторизирован)-->
-            <div class="main_lc">
+            <div class="main_lc start_auth">
                 <div class="breadcrumbs">
                     <div class="container">
                         <ul class="holder">
