--- a/Shop/lc-page/app/order.html
+++ b/Shop/lc-page/app/order.html
@@ -1390,7 +1390,7 @@
                                 <span class="final_price"><span class="left">Итого:</span> <span class="right">100 000<span class="rub">руб.</span></span></span>
                             </div>
                             <div class="bottom_pay_section">
-                                <button class="pay">Оплатить</button>
+                                <button class="pay in-progress">Оплатить</button>
                             </div>
                         </div>
                     </div>
