--- a/Shop/lc-page/app/order.html
+++ b/Shop/lc-page/app/order.html
@@ -1327,8 +1327,14 @@
                                     </div>
                                     <div class="checkbox">
                                         <input type="checkbox" class="checkbox_item" id="checkbox_2">
-                                        <label for="checkbox_2">Интерисует установка этого товара (от 500<span class="rub">руб.</span>)</label>
-                                        <a class="more_btn" href="#">Подробнее</a>
+                                        <label for="checkbox_2">
+                                            <span>
+                                                <span class="txt_content">
+                                                    Интерисует установка этого товара (от 500<span class="rub">руб.</span>)
+                                                </span>
+                                                <a class="more_btn" href="#">Подробнее</a>
+                                            </span>
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="order_item">
