--- a/Shop/lc-page/app/order.html
+++ b/Shop/lc-page/app/order.html
@@ -1382,7 +1382,7 @@
                                                             <span>2 упак.</span>
                                                         </div>
                                                         <div class="total-price_col">
-                                                            <span>9 999 999 <span class="rub">руб.</span></span>
+                                                            <span>999 999 <span class="rub">руб.</span></span>
                                                         </div>
                                                     </div>
                                                 </div>
