--- a/Shop/buttons/index.html
+++ b/Shop/buttons/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body class="inner_page">
-    <button class="var1" type="button">Оплатить</button>
-    <button class="var2" type="button">Показать еще</button>
-    <button class="var3" type="button">Больше</button>
+    <button class="var1 progress_style1" type="button"><span>Оплатить</span></button>
+    <button class="var2 progress_style1" type="button"><span>Показать еще</span></button>
+    <button class="var3 progress_style2" type="button"><span>Больше</span></button>
 </body>
+<!-- Появление анимаии регулируется добавлением класса in-progress -->
+
 <!-- ДЛЯ НАГЛЯДНОСТИ -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script>
