--- a/portfolio/Individual/app/index.html
+++ b/portfolio/Individual/app/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/start.css">
   <link rel="stylesheet" href="css/gallery.css">
+  <link rel="stylesheet" href="css/barber.css">
 </head>
 
 <body>
@@ -93,87 +94,151 @@
         </div>
       </div>
       <div class="gallery-page desc">
-      	<div class="gallery-page_content">
-      		<div class="gallery-slider_container">
-      			 <div class="slider_content">
-      			 	<div class="gallery-slider">
-      			 		<div class="slide">
+        <div class="gallery-page_content">
+          <div class="gallery-slider_container">
+            <div class="slider_content">
+              <div class="gallery-slider">
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide1.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide1.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide2.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide2.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide3.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide3.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide4.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide4.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide5.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide5.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide6.png" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide6.png" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide7.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide7.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide8.jpg" alt="">
-      			 		</div>
-      			 		<div class="slide">
+                  <img src="compressed_img/slide8.jpg" alt="">
+                </div>
+                <div class="slide">
                   <span class="bg"></span>
-      			 			<img src="img/slide9.jpg" alt="">
-      			 		</div>
-      			 	</div>
-      			 </div>
-      		</div>
-      		<div class="gallery_navigation">
-      			<div class="slider_container">
-      				<div class="nav-slider">
-      				<div class="slide_item">
-      					<img src="img/as_nav_img1.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img2.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img3.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img4.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img5.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img6.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img7.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img8.jpg" alt="img1">
-      				</div>
-      				<div class="slide_item">
-      					<img src="img/as_nav_img9.jpg" alt="img1">
-      				</div>
-      			</div>
-      			</div>
-      		</div>
-      	</div>
+                  <img src="compressed_img/slide9.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery_navigation">
+            <div class="slider_container">
+              <div class="nav-slider">
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img1.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img2.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img3.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img4.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img5.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img6.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img7.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img8.jpg" alt="img1">
+                </div>
+                <div class="slide_item">
+                  <img src="compressed_img/as_nav_img9.jpg" alt="img1">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="barbershops-page desc">
+        <div class="container">
+          <div class="barbershops-page_content">
+            <span class="title">барбершопы topgun <span>individual</span></span>
+            <div class="barbershops_container">
+              <div class="block">
+                <div class="block_container">
+                  <div class="img_block">
+                    <img src="img/barbershop1.jpg" alt="">
+                  </div>
+                  <div class="info_block">
+                    <div class="place_block">
+                      <span class="top_city">Москва</span>
+                      <span class="adress">ул. Новый Арбат, 36, стр. 3</span>
+                      <a class="number" href="tel:79265451444">+7 (926) 5451 444</a>
+                      <span class="insta">topgun_individual</span>
+                    </div>
+                  </div>
+                  <div class="bottom">
+                    <a class="signup" href="#">Записаться он-лайн</a>
+                  </div>
+                </div>
+              </div>
+              <div class="block">
+                <div class="block_container">
+                  <div class="img_block">
+                    <img src="img/barbershop2.jpg" alt="">
+                  </div>
+                  <div class="info_block">
+                    <div class="place_block">
+                      <span class="top_city">барвиха</span>
+                      <span class="adress">Рублево-Успенское ш., 85/1 <br> ТЦ <span>Dream House <span class="num">3</span></span> этаж</span>
+                      <a class="number" href="tel:79259045444">+7 (925) 9045 444</a>
+                      <span class="insta">topgun_individual_barvikha</span>
+                    </div>
+                  </div>
+                  <div class="bottom">
+                    <a class="signup" href="#">Записаться он-лайн</a>
+                  </div>
+                </div>
+              </div>
+              <div class="block">
+                <div class="block_container">
+                  <div class="img_block">
+                    <img src="img/barbershop3.jpg" alt="">
+                  </div>
+                  <div class="info_block">
+                    <div class="place_block">
+                      <span class="top_city">Санкт-Петербург</span>
+                      <span class="adress">ул. Спортивная, д.2</span>
+                      <a class="number" href="tel:+79112219444">+7 (911) 221 94 44</a>
+                      <span class="insta">topgun_spb_individual</span>
+                    </div>
+                  </div>
+                  <div class="bottom">
+                    <a class="signup" href="#">Записаться он-лайн</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="backgrounds">
-      <span class="bg_page start_bg"></span>
+      <div class="bg_page start_bg"></div>
+      <div class="bg_page barber_bg"></div>
     </div>
   </div>
   <!--Sripts-->
