--- a/portfolio/Individual/app/index.html
+++ b/portfolio/Individual/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/start.css">
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/barber.css">
+  <link rel="stylesheet" href="css/services.css">
 </head>
 
 <body>
@@ -235,10 +236,38 @@
           </div>
         </div>
       </div>
+      <div class="services-page desc">
+        <div class="container">
+          <div class="services-page_content">
+            <div class="page_title">
+              <img src="img/services_title.png" alt="">
+            </div>
+            <div class="page_content">
+              <div class="section_left">
+                <div class="top_img">
+                  <img src="img/services_img_left.jpg" alt="">
+                </div>
+                <div class="txt">
+                  <img src="img/services_txt_left.png" alt="">
+                </div>
+              </div>
+              <div class="section_right">
+                <div class="top_img">
+                  <img src="img/services_img_right.jpg" alt="">
+                </div>
+                <div class="txt">
+                  <img src="img/services_txt_right.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> 
     </div>
     <div class="backgrounds">
       <div class="bg_page start_bg"></div>
       <div class="bg_page barber_bg"></div>
+      <div class="bg_page services_bg"></div>
     </div>
   </div>
   <!--Sripts-->
