--- a/portfolio/Individual/app/index.html
+++ b/portfolio/Individual/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/barber.css">
   <link rel="stylesheet" href="css/services.css">
+  <link rel="stylesheet" href="css/cosmetics.css">
 </head>
 
 <body>
@@ -262,12 +263,77 @@
             </div>
           </div>
         </div>
-      </div> 
+      </div>
+      <div class="cosmetics-page desc">
+        <div class="container">
+          <div class="cosmetics-page_content">
+            <div class="title_block">
+              <span class="title">косметика и аксессуары
+              </span>
+              <span class="title">лучших мужских брендов</span>
+              <span class="sub">+ эксклюзивные серии</span>
+            </div>
+            <div class="cosmetics_blocks">
+              <div class="cosmetics_container">
+                <div class="block">
+                  <img src="img/cosmetics/brand1.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand2.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand3.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand4.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand5.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand6.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand7.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand8.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand9.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand10.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand11.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand12.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand13.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand14.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand15.png" alt="">
+                </div>
+                <div class="block">
+                  <img src="img/cosmetics/brand16.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="backgrounds">
       <div class="bg_page start_bg"></div>
       <div class="bg_page barber_bg"></div>
       <div class="bg_page services_bg"></div>
+      <div class="bg_page cosmetics_bg"></div>
     </div>
   </div>
   <!--Sripts-->
