--- a/portfolio/Individual/app/index.html
+++ b/portfolio/Individual/app/index.html
@@ -268,13 +268,13 @@
         <div class="container">
           <div class="cosmetics-page_content">
             <div class="title_block">
-              <span class="title">косметика и аксессуары
+              <span class="title">косметика <br> и аксессуары
               </span>
               <span class="title">лучших мужских брендов</span>
               <span class="sub">+ эксклюзивные серии</span>
             </div>
-            <div class="cosmetics_blocks">
-              <div class="cosmetics_container">
+            <div class="cosmetics_blocks parent_container">
+              <div class="cosmetics_container child_container">
                 <div class="block">
                   <img src="img/cosmetics/brand1.png" alt="">
                 </div>
